# HBN_SFOS_Components

./: .gitignore  AUTHORS  AboutPage.qml  BT_SFOS_Components.pri  BT_SFOS_Components.pro  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  Changelog.qml  ChangelogDelegate.qml  ComboBoxList.qml  Contributors.qml  ContributorsDelegate.qml  FirstStartInfo.qml  HBN_SFOS_Components.pri  IconWithHint.qml  LICENSE  PaypalChooser.qml  README.md  qmldir.in  releasel10n.sh  updatel10n.sh
.tx/: config
cmake/modules/: hbnSfosComponents-config-version.cmake.in  hbnSfosComponents-config.cmake.in
images/: CMakeLists.txt  createIcons.sh
qml/: AboutPage.qml  CMakeLists.txt  Changelog.qml  ChangelogDelegate.qml  Contributors.qml  ContributorsDelegate.qml  IconWithHint.qml  InfoHint.qml  LicenseDelegate.qml  PaypalChooser.qml  qmldir
qml/de/: CMakeLists.txt  CMakeListst.txt
qml/de/huessenbergnetz/: CMakeLists.txt
qml/de/huessenbergnetz/hbnsc/: AboutPage.qml  CMakeLists.txt  Changelog.qml  ChangelogDelegate.qml  Contributors.qml  ContributorsDelegate.qml  IconWithHint.qml  InfoHint.qml  LanguagePicker.qml  LicenseDelegate.qml  PaypalChooser.qml  qmldir
qml/de/huessenbergnetz/hbnsc/licenses/: Apache-2_0.qml  CC-BY-3_0.qml  CC-BY-4_0.qml  CC-BY-NC-SA-4_0.qml  CC-SP-1_0.qml  CC0-1_0.qml  GPLv2.qml  GPLv3GCCRLE.qml  LGPLv2_1.qml  LGPLv3.qml  LicenseBase.qml  OpenSSL.qml  SQLite.qml  zlib.qml
qml/licenses/: BSD-3.qml  GPLv3.qml  LGPLv3.qml  LicenseBase.qml  SIL-OFL-1_1.qml
src/: CMakeLists.txt  btsciconprovider.h  hbnsc.cpp  hbnsc.h  hbnsciconprovider.cpp  hbnsciconprovider.h  hbnsclanguagemodel.cpp  hbnsclanguagemodel.h  hbnsclicensemodel.cpp  hbnsclicensemodel.h
translations/: CMakeLists.txt  btsc.ts  btsc_da.ts  btsc_de.ts  btsc_es.ts  btsc_es_419.ts  btsc_nl.ts  btsc_sv.ts  hbnsc.ts  hbnsc_da.ts  hbnsc_de.ts  hbnsc_en_GB.ts  hbnsc_en_US.ts  hbnsc_es.ts  hbnsc_es_419.ts  hbnsc_fr.ts  hbnsc_it.ts  hbnsc_nl.ts  hbnsc_sv.ts  hbnsc_tr.ts  hbnsc_zh.ts
